--- a/client/index.html
+++ b/client/index.html
@@ -228,6 +228,7 @@
           <script src="components/core/data/roomListingView.js"></script>
           <script src="components/core/data/roommates.js"></script>
           <script src="components/core/data/university.data.js"></script>
+          <script src="components/core/data/university.js"></script>
           <script src="components/core/data/vehicle.js"></script>
           <script src="components/layout/footer/footer.controller.js"></script>
           <script src="components/layout/navbar/navbar.controller.js"></script>
