finished room listing api .... working on room detail front end

--- a/client/index.html
+++ b/client/index.html
@@ -104,6 +104,7 @@
           <script src="components/blocks/logger/logger.module.js"></script>
           <script src="components/blocks/exception/exception.module.js"></script>
           <script src="app/rooms/rooms.module.js"></script>
+          <script src="app/roomDetail/roomDetail.module.js"></script>
 
           <!-- injector:js -->
           <script src="app/account/account.routes.js"></script>
@@ -205,6 +206,7 @@
           <script src="app/dashboard/my-rooms/add.new.room/add.new.room.route.js"></script>
           <script src="app/landing/landing.controller.js"></script>
           <script src="app/prerender.controller.js"></script>
+          <script src="app/roomDetail/roomDetail.controller.js"></script>
           <script src="app/rooms/rooms.controller.js"></script>
           <script src="components/blocks/exception/exception-handler.js"></script>
           <script src="components/blocks/exception/exception.js"></script>
