--- a/client/app/rooms/rooms.html
+++ b/client/app/rooms/rooms.html
@@ -26,7 +26,7 @@
             </ul>
           </div>
           <div class="back">
-            <a ui-sref="roomDetail"> <h2>View Detail</h2> </a>
+            <a ui-sref="roomDetail({id: room.roomDetails.id})"> <h2>View Detail</h2> </a>
           </div>
         </div>
       </div>
