--- a/client/app/rooms/rooms.html
+++ b/client/app/rooms/rooms.html
@@ -1,13 +1,13 @@
 <div ng-include="'components/layout/navbar/navbar.html'"></div>
 <div ng-include="'components/layout/navbar/sub-navbar.html'"></div>
-<div ui-view="">
-  <div class="container">
-    <div class="page-header">
-      <h2> Available Rooms </h2>
-    </div>
-    <div class="row my-rooms white-box">
-      <slick dots="true" class="slider row" slides-to-show="3" slides-to-scroll="3" responsive="dashboard.breakpoints.availableRooms"  init-onload="true" data="rooms.availableRooms">
-        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 room" ng-repeat="property in rooms.availableRooms">
+<div class="main-wrapper">
+  <div class="container available-rooms">
+    <div class="row">
+      <div class="page-header">
+        <h2> Available Rooms </h2>
+      </div>
+      <div class="row">
+      <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 room" ng-repeat="property in rooms.availableRooms">
           <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
             <div class="flipper">
               <div class="front white-box">
@@ -35,8 +35,7 @@
             </div>
           </div>
         </div>
-      </slick>
+      </div>
     </div>
-
   </div>
 </div>
