--- a/client/app/rooms/rooms.html
+++ b/client/app/rooms/rooms.html
@@ -7,9 +7,9 @@
       <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
         <div class="flipper">
           <div class="front white-box">
-            <!--<div class="picture">-->
-              <!--<img ng-src="{{room.propertyDetails.image_url}}" alt="">-->
-            <!--</div>-->
+            <div class="picture">
+              <img ng-src="{{room.propertyDetails.coords}}" alt="">
+            </div>
             <!--<google-map center="map.center" zoom="map.zoom" draggable="true">-->
                 <!--<marker coords="{{room.propertyDetails.coords}}" idKey="marker.idKey"></marker>-->
             <!--</google-map>-->
