--- a/client/app/dashboard/messages/messages.html
+++ b/client/app/dashboard/messages/messages.html
@@ -1,10 +1,12 @@
-<div ui-view="">
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        <h2> My Messages</h2>
-        <div class="white-box ">
-          <h1>{{myMessages.test}}</h1>
+<div class="main-wrapper">
+  <div ui-view="">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+          <h2> My Messages</h2>
+          <div class="white-box ">
+            <h1>{{myMessages.test}}</h1>
+          </div>
         </div>
       </div>
     </div>
