--- a/client/app/dashboard/my-profile/edit-profile/edit.profile.html
+++ b/client/app/dashboard/my-profile/edit-profile/edit.profile.html
@@ -52,47 +52,57 @@
   <div class="white-box">
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        <label for="educationCenterName">Education centre name</label>
-        <input type="text" id="educationCenterName" name="educationCenterName" class="form-control" ng-model="editProfile.tempEducation.educationCenterName"/>
-
-        <select class="form-control" ng-model="editProfile.tempEducation.educationCenterName" ng-options="university.name for university in editProfile.universitiesList">
-          <option value="">-- Select university --</option>
-        </select>
+        <div class="form-group">
+          <label for="educationCenterName">Education centre name</label>
+          <select class="form-control" ng-model="editProfile.tempEducation.educationCenterName" ng-options="university.id as university.name for university in editProfile.universitiesList">
+            <option value="">-- Select university --</option>
+          </select>
+        </div>
         
-        <label for="type">Type</label>
-        <select id="type" class="form-control" data-ng-model="editProfile.tempEducation.type">
-          <option value="university">University</option>
-          <option value="trade">Trade</option>
-          <option value="military">Military</option>
-        </select>
+        <div class="form-group">
+          <label for="type">Type</label>
+          <select id="type" class="form-control" data-ng-model="editProfile.tempEducation.type">
+            <option value="university">University</option>
+            <option value="trade">Trade</option>
+            <option value="military">Military</option>
+          </select>
+        </div>
 
-        <!--<label for="graduation">Graduated</label>-->
-        <!--<input type="checkbox" ng-model="editProfile.tempEducation.graduation" id="graduation" class="form-control" name="graduation"/>-->
-        <br/>
-        <label for="graduation">Graduated?</label><br/>
-        <label class="radio-inline"><input type="radio" name="graduation" id="graduation" ng-model="editProfile.tempEducation.graduation" value="1">Yes</label>
-        <label class="radio-inline"><input type="radio" name="graduation" id="graduation" ng-model="editProfile.tempEducation.graduation" value="0">No</label>
+        <div class="form-group">
+          <label for="graduation">Graduated?</label>
+          <label class="radio-inline">
+            <input type="radio" name="graduation" id="graduation" ng-model="editProfile.tempEducation.graduation" value="1">Yes
+          </label>
+          <label class="radio-inline"><input type="radio" name="graduation" id="graduation" ng-model="editProfile.tempEducation.graduation" value="0">No
+          </label>
+        </div>
 
         <div class="row">
-          <div class="col-md-4"><br/>
-            <label for="start">Start date</label>
-            <p class="input-group">
-              <input type="text" id="start" class="form-control" datepicker-popup="{{format}}" ng-model="editProfile.tempEducation.startDate" is-open="datePickers.startDate" close-text="Close" />
-              <span class="input-group-btn">
-                <button type="button" class="btn" ng-click="open($event,'startDate')"><i class="glyphicon glyphicon-calendar"></i></button>
-              </span>
-            </p>
+          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+            <div class="form-group">
+              <label for="start">Start date</label>
+              <p class="input-group">
+                <input type="text" id="start" class="form-control" datepicker-popup="{{format}}" ng-model="editProfile.tempEducation.startDate" is-open="datePickers.EducationStartDate" close-text="Close" />
+                <span class="input-group-btn">
+                  <button type="button" class="btn" ng-click="open($event,'EducationStartDate')"><i class="glyphicon glyphicon-calendar"></i></button>
+                </span>
+              </p>
+            </div>
           </div>
-          <div class="col-md-4"><br/>
+          
+          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
             <label for="end">End date</label>
             <p class="input-group">
-              <input type="text" id="end" class="form-control" datepicker-popup="{{format}}" ng-model="editProfile.tempEducation.endDate" is-open="datePickers.endDate"  close-text="Close" />
+              <input type="text" id="end" class="form-control" datepicker-popup="{{format}}" ng-model="editProfile.tempEducation.endDate" is-open="datePickers.EducationEndDate"  close-text="Close">
               <span class="input-group-btn">
-                <button type="button" class="btn btn-default" ng-click="open($event,'endDate')"><i class="glyphicon glyphicon-calendar"></i></button>
+                <button type="button" class="btn btn-default" ng-click="open($event,'EducationEndDate')">
+                  <i class="glyphicon glyphicon-calendar"></i>
+                </button>
               </span>
             </p>
           </div>
-          <div class="col-md-4" ng-if="editProfile.tempEducation.graduation==1"><br/>
+
+          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4" ng-if="editProfile.tempEducation.graduation==1"><br/>
             <label for="graduationDate">Graduation date</label>
             <p class="input-group">
               <input  type="text" id="graduationDate" class="form-control" datepicker-popup="{{format}}" ng-model="editProfile.tempEducation.graduationDate" is-open="datePickers.graduationDate"  close-text="Close" />
@@ -100,87 +110,89 @@
                 <button type="button" class="btn" ng-click="open($event,'graduationDate')"><i class="glyphicon glyphicon-calendar"></i></button>
               </span>
             </p>
-          </div><div class="col-md-4" ng-if="editProfile.tempEducation.graduation==0"></div>    </div>
-
-          <label for="major">Major</label>
-          <input type="text" ng-model="editProfile.tempEducation.major" id="major" class="form-control" name="major"/>
-
-          <label for="degreeType">Degree type</label>
-          <select id="degreeType" class="form-control" data-ng-model="editProfile.tempEducation.degreeType">
-            <option value="undergraduate">Undergraduate</option>
-            <option value="graduate">Graduate</option>
-            <option value="doctorate">Doctorate</option>
-            <option value="post-doctorate">Post-doctorate</option>
-          </select>
-
-          <br/>
-
-          <button class="btn btn-primary" ng-click="editProfile.saveEducation(editProfile.tempEducation)">Save changes</button>
+          </div>
 
         </div>
+
+        <label for="major">Major</label>
+        <input type="text" ng-model="editProfile.tempEducation.major" id="major" class="form-control" name="major"/>
+
+        <label for="degreeType">Degree type</label>
+        <select id="degreeType" class="form-control" data-ng-model="editProfile.tempEducation.degreeType">
+          <option value="undergraduate">Undergraduate</option>
+          <option value="graduate">Graduate</option>
+          <option value="doctorate">Doctorate</option>
+          <option value="post-doctorate">Post-doctorate</option>
+        </select>
+
+        <br/>
+
+        <button class="btn btn-primary" ng-click="editProfile.saveEducation(editProfile.tempEducation)">Save changes</button>
 
       </div>
+
     </div>
+  </div>
 
 
-    <div class="page-header">
-      <h2> Address Data </h2>
-    </div>
-    <div class="white-box">
-      <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-          <label for="streetAddress">Address</label>
-          <input type="text" id="streetAddress" name="streetAddress" class="form-control"  placeholder="Street name" ng-model="editProfile.tempAddress.streetAddress"/>
+  <div class="page-header">
+    <h2> Address Data </h2>
+  </div>
+  <div class="white-box">
+    <div class="row">
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <label for="streetAddress">Address</label>
+        <input type="text" id="streetAddress" name="streetAddress" class="form-control"  placeholder="Street name" ng-model="editProfile.tempAddress.streetAddress"/>
 
-          <label for="streetNumber">Number</label>
-          <input type="number" id="streetNumber" name="streetNumber" class="form-control"  placeholder="Street number" ng-model="editProfile.tempAddress.streetNumeric"/>
+        <label for="streetNumber">Number</label>
+        <input type="number" id="streetNumber" name="streetNumber" class="form-control"  placeholder="Street number" ng-model="editProfile.tempAddress.streetNumeric"/>
 
-          <label for="zip">Zip code</label>
-          <input type="number" id="zip" name="zip" class="form-control"  placeholder="zip code" ng-model="editProfile.tempAddress.zip"/>
+        <label for="zip">Zip code</label>
+        <input type="number" id="zip" name="zip" class="form-control"  placeholder="zip code" ng-model="editProfile.tempAddress.zip"/>
 
-          <label for="country">Country</label>
-          <input type="text" id="country" name="country" class="form-control"  placeholder="country" ng-model="editProfile.tempAddress.country"/>
+        <label for="country">Country</label>
+        <input type="text" id="country" name="country" class="form-control"  placeholder="country" ng-model="editProfile.tempAddress.country"/>
 
-          <label for="city">City</label>
-          <input type="text" id="city" name="city" class="form-control"  placeholder="city" ng-model="editProfile.tempAddress.city"/>
+        <label for="city">City</label>
+        <input type="text" id="city" name="city" class="form-control"  placeholder="city" ng-model="editProfile.tempAddress.city"/>
 
-          <label for="city">State</label>
-          <input type="text" id="state" name="state" class="form-control"  placeholder="state" ng-model="editProfile.tempAddress.state"/>
+        <label for="city">State</label>
+        <input type="text" id="state" name="state" class="form-control"  placeholder="state" ng-model="editProfile.tempAddress.state"/>
 
-          <label for="apt">Apt</label>
-          <input type="number" id="apt" name="apt" class="form-control"  placeholder="apt" ng-model="editProfile.tempAddress.apt"/><br/>
+        <label for="apt">Apt</label>
+        <input type="number" id="apt" name="apt" class="form-control"  placeholder="apt" ng-model="editProfile.tempAddress.apt"/><br/>
 
-          <label for="present">Present?</label><br/>
-          <label class="radio-inline"><input type="radio" name="present" id="present" ng-model="editProfile.tempAddress.present" value="1">Yes</label>
-          <label class="radio-inline"><input type="radio" name="present"  ng-model="editProfile.tempAddress.present" value="0">No</label><br/><br/>
+        <label for="present">Present?</label><br/>
+        <label class="radio-inline"><input type="radio" name="present" id="present" ng-model="editProfile.tempAddress.present" value="1">Yes</label>
+        <label class="radio-inline"><input type="radio" name="present"  ng-model="editProfile.tempAddress.present" value="0">No</label><br/><br/>
 
-          <div class="row">
-            <div class="col-md-6">
-              <label for="start">Start date</label>
-              <p class="input-group">
-                <input type="text" id="start" class="form-control" datepicker-popup="{{format}}" ng-model="editProfile.tempAddress.startDate" is-open="datePickers.startDate" close-text="Close" />
-                <span class="input-group-btn">
-                  <button type="button" class="btn" ng-click="open($event,'startDate')">
-                    <i class="glyphicon glyphicon-calendar"></i>
-                  </button>
-                </span>
-              </p>
-            </div>
-            <div class="col-md-6">
-              <label for="end">End date</label>
-              <p class="input-group">
-                <input type="text" id="end" class="form-control" datepicker-popup="{{format}}" ng-model="editProfile.tempAddress.endDate" is-open="datePickers.endDate"  close-text="Close" />
-                <span class="input-group-btn">
-                  <button type="button" class="btn" ng-click="open($event,'endDate')">
-                    <i class="glyphicon glyphicon-calendar"></i>
-                  </button>
-                </span>
-              </p>
-            </div>
+        <div class="row">
+          <div class="col-md-6">
+            <label for="start">Start date</label>
+            <p class="input-group">
+              <input type="text" id="start" class="form-control" datepicker-popup="{{format}}" ng-model="editProfile.tempAddress.startDate" is-open="datePickers.AddressStartDate" close-text="Close" />
+              <span class="input-group-btn">
+                <button type="button" class="btn" ng-click="open($event,'AddressStartDate')">
+                  <i class="glyphicon glyphicon-calendar"></i>
+                </button>
+              </span>
+            </p>
           </div>
-          <button class="btn btn-primary" ng-click="editProfile.saveAddress(editProfile.tempAddress)">Save Changes</button>
+          <div class="col-md-6">
+            <label for="end">End date</label>
+            <p class="input-group">
+              <input type="text" id="end" class="form-control" datepicker-popup="{{format}}" ng-model="editProfile.tempAddress.endDate" is-open="datePickers.AddressEndDate" close-text="Close" />
+              <span class="input-group-btn">
+                <button type="button" class="btn" ng-click="open($event,'AddressEndDate')">
+                  <i class="glyphicon glyphicon-calendar"></i>
+                </button>
+              </span>
+            </p>
+          </div>
         </div>
+        <button class="btn btn-primary" ng-click="editProfile.saveAddress(editProfile.tempAddress)">Save Changes</button>
       </div>
     </div>
   </div>
+</div>
 </div>
