--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -15,36 +15,11 @@
           </div>
 
           <div class="white-box profile-sidebar">
-            <div class="messages">
-              <h4>New messages</h4>
-              <hr>
-              <!-- start message box -->
-              <div class="message-box" ng-repeat="message in dashboard.messages">
-                <div class="media">
-                  <div class="media-left">
-                    <a >
-                      <img class="media-object profile-image img-circle" ng-src="{{message.profile_picture}}">
-                    </a>
-                  </div>
-                  <div class="media-body">
-                    <h4 class="media-heading user-name">{{message.username}}</h4>
-                    <p class="message">{{message.message}}</p>
-                    <em class="elapsed-time"> <i class="fa fa-clock-o"></i> {{message.elapsed_time}} </em>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- end message box -->
-            <a  class="btn btn-primary btn-block"> Views all messages </a>
-            <hr>
-
             <div class="profile">
               <img src="../assets/fake/girl.jpg" class="img-circle" alt="">
               <h2> Jennifer Clardy </h2>
               <a  class="btn btn-secondary btn-block" ui-sref="dashboard.myProfile"> Complete Profile </a>
             </div>
-
-
           </div>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
@@ -82,21 +57,23 @@
             <slick dots="true" class="slider row" slides-to-show="2" slides-to-scroll="2" responsive="dashboard.breakpoints.lookingRoom" init-onload="true" data="dashboard.lookingRoom">
 
               <!-- start room box -->
-              <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 room" ng-repeat="person in dashboard.lookingRoom track by $index">
+              <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 room" ng-repeat="looking in dashboard.lookingRoom track by $index">
                 <div class="media">
                   <div class="media-left">
                     <a >
-                      <img class="media-object profile-image img-circle" ng-src="{{person.profile_picture}}" >
+                      <img class="media-object profile-image img-circle" ng-src="api/images/{{looking.relatedUserId.profileImage}}" >
                     </a>
                   </div>
                   <div class="media-body">
-                    <h4 class="media-heading user-name">{{person.name}}</h4>
-                    <p class="quote">{{person.about_me}}</p>
+                    <h4 class="media-heading user-name">
+                      {{looking.relatedUserId.firstname}} {{looking.relatedUserId.lastname}}
+                      </h4>
+                    <p class="quote">{{looking.relatedUserId.aboutMe}}</p>
                   </div>
                   <ul class="profile-info">
-                    <li>{{person.max_rent | currency}}</li>
-                    <li>{{person.type}}</li>
-                    <li>{{person.distance}}</li>
+                    <li>{{looking.maxMonthlyRent | currency}}</li>
+                    <li>{{looking.gender}}</li>
+                    <li>{{looking.distanceToUniv}} miles </li>
                   </ul>
                 </div>
               </div>
