--- a/client/app/dashboard/my-profile/my.profile.html
+++ b/client/app/dashboard/my-profile/my.profile.html
@@ -43,34 +43,56 @@
       <div class="row">
 
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-          <h2> Roomates </h2>
+          <div class="page-header">
+            <h2> Roomates </h2>
+            <a class="bubble edit-profile" ng-click="myProfile.toggleRoommatesAddon()">
+              <i class="fa fa-plus" ng-hide="myProfile.showRoommatesAddonButtons"></i>
+              <i class="fa fa-minus" ng-show="myProfile.showRoommatesAddonButtons"></i>
+            </a>
+          </div>
           <div class="white-box roommates">
-            <div class="row invitation-box text-center">
 
-              <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 add">
-                <a class="bubble"><i class="fa fa-plus"></i></a>
-                <span>Add</span>
-              </div>
+            <div ng-show='myProfile.showRoommatesAddonButtons' class="text-center">
+              <a class="btn btn-primary btn-half-block" ng-click="myProfile.toggleAddRoommate()"> 
+                <i class="fa fa-plus"></i>
+                Add Roommate 
+              </a>
+              <a class="btn btn-secondary btn-half-block" ng-click="myProfile.toggleInviteRoomate()">
+                <i class="fa fa-envelope"></i>
+                Invite Roommate
+              </a>
+              <hr>
+            </div>
 
-              <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 or">
-                <span> OR </span>
-              </div>
-              <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5 invite">
-                <span>Invite</span>
-                <a class="bubble"><i class="fa fa-envelope"></i></a>
-              </div>
+            <div ng-show="myProfile.showAddRoommate">
+              <h3> Add Roommate </h3>
+              <angucomplete-alt id="members"
+              placeholder="Search for roommate"
+              pause="400"
+              selected-object="addNewRoommate"
+              local-data="myProfile.users.data"
+              search-fields="email"
+              title-field="firstname,lastname"
+              description-field="email"
+              image-field="profileImage"
+              input-class="form-control form-control-small"
+              match-class="redFont"
+              clear-selected="true">
             </div>
             <div class="row roommate" ng-repeat="roommate in myProfile.roommates">
-              <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
+              <div class="col-xs-2">
                 <div class="picture">
                   <img ng-src="api/images{{roommate.relatedroommateId.profileImage}}" alt="" class="img-circle">
                 </div>
               </div>
-              <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10 info">
+              <div class="col-xs-6 info">
                 <span class="name"> {{roommate.relatedRoommateId.firstname}} {{roommate.relatedRoommateId.lastname}} </span>
                 <span class="email">{{roommate.relatedRoommateId.email}}</span>
                 <span class="university">UNIVERSITY MISSING IN API</span>
                 <span class="city">CITY/STATE MISSING IN API</span>
+              </div>
+              <div class="actions col-xs-4">
+                <a class="bubble remove" ng-click="myProfile.removeRoommate(roommate)"><i class="fa fa-trash-o"></i></a>
               </div>
             </div>
 
@@ -81,16 +103,19 @@
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
           <div class="page-header">
             <h2> Pets & Vehicles </h2>
-            <a class="bubble edit-profile" ng-click="myProfile.toggleAddon()">
-              <i class="fa fa-plus" ng-hide="myProfile.showAddonButtons"></i>
-              <i class="fa fa-minus" ng-show="myProfile.showAddonButtons"></i>
+            <a class="bubble edit-profile" ng-click="myProfile.togglePetAddon()">
+              <i class="fa fa-plus" ng-hide="myProfile.showPetAddonButtons"></i>
+              <i class="fa fa-minus" ng-show="myProfile.showPetAddonButtons"></i>
             </a>
           </div>
           <div class="white-box pets">
-            <div ng-show='myProfile.showAddonButtons' class="text-center">
-              <h3>What you wanna add?</h3>
-              <a class="btn btn-primary btn-half-block" ng-click="myProfile.toggleAddPet()"> Add Pet</a>
-              <a class="btn btn-secondary btn-half-block" ng-click="myProfile.toggleAddVehicle()"> Add Vehicle</a>
+            <div ng-show='myProfile.showPetAddonButtons' class="text-center">
+              <a class="btn btn-primary btn-half-block" ng-click="myProfile.toggleAddPet()"> 
+                <i class="fa fa-pet"></i> Add Pet
+              </a>
+              <a class="btn btn-secondary btn-half-block" ng-click="myProfile.toggleAddVehicle()">
+                <i class="fa fa-vehicle"></i> Add Vehicle
+              </a>
               <hr>
             </div>
             <form ng-show="myProfile.showAddPet">
