Sign-in, sign-up and Dashboard links. A new Row in property and Room table

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -70,6 +70,7 @@
               </div>
               <!-- end room box -->
               <hr>
+              <a class="pull-right btn-rented-event" ui-sref="rooms">View All</a>
             </slick>
           </div>
 
@@ -98,6 +99,7 @@
               </div>
               <!-- end room box -->
               <hr>
+              <a class="pull-right btn-rented-event" ui-sref="dashboard.looking">View All</a>
             </slick>
           </div>
 
@@ -115,6 +117,7 @@
               </div>
               <!-- end student box -->
               <hr>
+              <a class="pull-right btn-rented-event" ui-sref="dashboard.around">View All</a>
             </slick>
           </div>
 
