--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -1,7 +1,13 @@
 <div class="main">
   <div ng-include="'components/layout/navbar/navbar.html'"></div>
   <section class="login-box white-box">
-    <h2 class="heading">Sign up</h2>
+    <h2 class="heading">Sign up with...</h2>
+
+    <article class="social">
+      <a class="link email"><span>Email</span></a>
+      <a class="link fb" ng-click="signup.loginOauth('facebook')"><span>Facebook</span></a>
+      <a class="link google" ng-click="signup.loginOauth('google')"><span>Google+</span></a>
+    </article>
 
     <form class="main-form" name="form" ng-submit="signup.register(form)" novalidate>
 
@@ -15,13 +21,8 @@
         <p class="help-block" ng-show="form.lastname.$error.required && signup.submitted">A last name is required</p>
       </label>
 
-      <label class="lbl">
-        <input type="text" ng-model="signup.user.phone" ui-mask="999-999-9999" ng-class="{'has-success': form.phone.$valid && signup.submitted, 'has-error': form.phone.$invalid && signup.submitted}" required/>
-        <p class="help-block" ng-show="form.username.$error.required && signup.submitted">A phone number is required</p>
-      </label>
-
       <label class="lbl" ng-class="{ 'has-success': form.email.$valid && signup.submitted, 'has-error': form.email.$invalid && signup.submitted }">
-        <input type="email" ng-model="signup.user.email"  placeholder="Your email" required>
+        <input type="email" ng-model="signup.user.email"  placeholder="Your email address (.edu required)" required>
         <p class="help-block" ng-show="form.email.$error.email && signup.submitted">Doesn't look like a valid email.</p>
         <p class="help-block" ng-show="form.email.$error.required && signup.submitted">What's your email address?</p>
         <p class="help-block" ng-show="!form.email.$error.email && !form.email.$error.required && form.email.$invalid && signup.submitted">Your email have to finish with .edu</p>
