--- a/client/app/dashboard/my-profile/my.profile.html
+++ b/client/app/dashboard/my-profile/my.profile.html
@@ -65,7 +65,9 @@
             </div>
 
             <div ng-show="myProfile.showAddRoommate">
-              <h3> Add Roommate </h3>
+              <a class="bubble cancel" ng-click="myProfile.cancelRoommateAddAddon()"><i class="fa fa-close"></i></a>
+              <h3>Search for your Roommate using by email. </h3>
+              
               <angucomplete-alt id="members"
               placeholder="Search for roommate"
               pause="400"
@@ -78,7 +80,16 @@
               input-class="form-control form-control-small"
               match-class="redFont"
               clear-selected="true">
+              <hr>
+              
+
             </div>
+            <h2 class="no-roommate" ng-hide="myProfile.showAddRoommate || myProfile.roommates.length > 0"> 
+              You don't have any roommate yet. 
+              <small>
+                <a href="" ng-click="myProfile.toggleAddRoommate()">Click here</a> to find and add your rommates.
+              </small>
+            </h2>
             <div class="row roommate" ng-repeat="roommate in myProfile.roommates">
               <div class="col-xs-2">
                 <div class="picture">
