--- a/client/index.html
+++ b/client/index.html
@@ -223,6 +223,7 @@
           <script src="components/core/data/finance.js"></script>
           <script src="components/core/data/local.js"></script>
           <script src="components/core/data/looking.js"></script>
+          <script src="components/core/data/lookings.js"></script>
           <script src="components/core/data/occupation.js"></script>
           <script src="components/core/data/pet.js"></script>
           <script src="components/core/data/property.js"></script>
