--- a/client/app/dashboard/my-profile/add-looking/new.looking.html
+++ b/client/app/dashboard/my-profile/add-looking/new.looking.html
@@ -1,76 +1,104 @@
 <div class="container">
   <div class="col-md-12">
 
+    <!--start of first col 4-->
     <div class="col-md-4">
-      <label for="maxMonthlyRent">Max monthly rent</label>
+        <label for="moveInDate">Move in</label>
+        <p class="input-group">
+          <input type="text" id="moveInDate" class="form-control" datepicker-popup="{{format}}" ng-model="newLooking.tempLooking.moveInDate" is-open="datePickers.startDate" close-text="Close" />
+                      <span class="input-group-btn">
+                        <button type="button" class="btn btn-default" ng-click="open($event,'startDate')"><i class="glyphicon glyphicon-calendar"></i></button>
+                      </span>
+        </p>
+
+        <label for="moveInDate">Move out</label>
+        <p class="input-group">
+          <input type="text" id="moveOutDate" class="form-control" datepicker-popup="{{format}}" ng-model="newLooking.tempLooking.moveOutDate" is-open="datePickers.endDate" close-text="Close" />
+                          <span class="input-group-btn">
+                            <button type="button" class="btn btn-default" ng-click="open($event,'endDate')"><i class="glyphicon glyphicon-calendar"></i></button>
+                          </span>
+        </p>
+
+        <label for="maxMonthlyRent">Max monthly rent</label>
         <input type="number" id="maxMonthlyRent" name="maxMonthlyRent" class="form-control"  placeholder="Max monthly rent" ng-model="newLooking.tempLooking.maxMonthlyRent"/>
 
-        <label for="distanceToUniv">distance to university</label>
-        <input type="number" id="distanceToUniv" name="distanceToUniv" class="form-control"  placeholder="distance to university" ng-model="newLooking.tempLooking.distanceToUniv"/>
-
         <label for="utilitiesIncluded">utilities included</label><br/>
-        <label class="radio-inline"><input type="radio" name="utilitiesIncluded" id="utilitiesIncluded" ng-model="newLooking.tempLooking.utilitiesIncluded" value="1">Yes</label>
-        <label class="radio-inline"><input type="radio" name="utilitiesIncluded"  ng-model="newLooking.tempLooking.utilitiesIncluded" value="0">No</label><br/><br/>
+        <select id="utilitiesIncluded" class="form-control" ng-model="newLooking.tempLooking.utilitiesIncluded">
+          <option value="true">Yes</option>
+          <option value="false">No</option>
+        </select>
 
-          <label for="moveInDate">Move in date</label>
-          <p class="input-group">
-            <input type="text" id="moveInDate" class="form-control" datepicker-popup="{{format}}" ng-model="newLooking.tempLooking.moveInDate" is-open="datePickers.startDate" close-text="Close" />
-                    <span class="input-group-btn">
-                      <button type="button" class="btn btn-default" ng-click="open($event,'startDate')"><i class="glyphicon glyphicon-calendar"></i></button>
-                    </span>
-          </p>
+        <label for="busRouteRequired">Near bus lines</label><br/>
+        <select id="busRouteRequired" class="form-control" ng-model="newLooking.tempLooking.busRouteRequired">
+          <option value="true">Yes</option>
+          <option value="false">No</option>
+        </select>
+    </div>
+    <!--end of first col 4-->
 
-        <label for="openToFullYearLeaseNewRoomates">Open To Full Year Lease New Roomates</label><br/>
-        <label class="radio-inline"><input type="radio" name="openToFullYearLeaseNewRoomates" id="openToFullYearLeaseNewRoomates" ng-model="newLooking.tempLooking.openToFullYearLeaseNewRoomates" value="1">Yes</label>
-        <label class="radio-inline"><input type="radio" name="openToFullYearLeaseNewRoomates"  ng-model="newLooking.tempLooking.openToFullYearLeaseNewRoomates" value="0">No</label><br/><br/>
-      </div>
-
+    <!--start of second col 4-->
      <div class="col-md-4">
-        <label for="roomType">Room type</label>
-        <select id="roomType" class="form-control" ng-model="newLooking.tempLooking.roomType">
-          <option value="single">single</option>
-          <option value="double">double</option>
-          <option value="living room">living room</option>
-        </select>
 
-        <label for="gender">Gender</label>
-        <select id="gender" class="form-control" ng-model="newLooking.tempLooking.gender">
-          <option value="male only">male only</option>
-          <option value="female only">female only</option>
-          <option value="no preference">no preference</option>
-        </select>
+         <label for="numRoommates">Max roommates</label>
+         <input type="number" id="numRoommates" name="numRoommates" class="form-control"  placeholder="num roommates" ng-model="newLooking.tempLooking.numRoommates"/>
 
-        <label for="sharedBathroom">Shared Bathroom</label><br/>
-        <label class="radio-inline"><input type="radio" name="sharedBathroom" id="sharedBathroom" ng-model="newLooking.tempLooking.sharedBathroom" value="1">Yes</label>
-        <label class="radio-inline"><input type="radio" name="sharedBathroom"  ng-model="newLooking.tempLooking.sharedBathroom" value="0">No</label><br/><br/>
+         <label for="gender">Gender</label>
+         <select id="gender" class="form-control" ng-model="newLooking.tempLooking.gender">
+           <option value="male only">male only</option>
+           <option value="female only">female only</option>
+           <option value="no preference">no preference</option>
+         </select>
 
-        <label for="numRoommates">Number of roommates</label>
-        <input type="number" id="numRoommates" name="numRoommates" class="form-control"  placeholder="num roommates" ng-model="newLooking.tempLooking.numRoommates"/>
+         <label for="sharedBathroom">Shared Bathroom</label><br/>
+         <select id="sharedBathroom" class="form-control" ng-model="newLooking.tempLooking.sharedBathroom">
+           <option value="true">Yes</option>
+           <option value="false">No</option>
+         </select>
 
-        <label for="furnished">furnished</label><br/>
-        <label class="radio-inline"><input type="radio" name="furnished" id="furnished" ng-model="newLooking.tempLooking.furnished" value="1">Yes</label>
-        <label class="radio-inline"><input type="radio" name="furnished"  ng-model="newLooking.tempLooking.furnished" value="0">No</label><br/><br/>
+          <label for="roomType">Room type</label>
+          <select id="roomType" class="form-control" ng-model="newLooking.tempLooking.roomType">
+            <option value="single">single</option>
+            <option value="double">double</option>
+            <option value="living room">living room</option>
+         </select>
 
+         <label for="furnished">furnished</label><br/>
+         <select id="furnished" class="form-control" ng-model="newLooking.tempLooking.furnished">
+           <option value="true">Yes</option>
+           <option value="false">No</option>
+         </select>
+     </div>
+    <!--end of second col 4-->
+
+    <!--start of third col 4-->
+    <div class="col-md-4">
+      <label for="smokingAllowed">Smoking</label><br/>
+      <select id="smokingAllowed" class="form-control" ng-model="newLooking.tempLooking.smokingAllowed">
+        <option value="true">Yes</option>
+        <option value="false">No</option>
+      </select>
+
+      <label for="petsAllowed">Pets</label><br/>
+      <select id="petsAllowed" class="form-control" ng-model="newLooking.tempLooking.petsAllowed">
+        <option value="true">Yes</option>
+        <option value="false">No</option>
+      </select>
+
+      <label for="parkingNeeded">Parking</label><br/>
+      <select id="parkingNeeded" class="form-control" ng-model="newLooking.tempLooking.parkingNeeded">
+        <option value="true">Yes</option>
+        <option value="false">No</option>
+      </select><br/>
+
+      <input type="checkbox" ng-model="newLooking.tempLooking.openToFullYearLeaseNewRoomates" id="openToFullYearLeaseNewRoomates"/>
+      <label for="openToFullYearLeaseNewRoomates">Open To Full Year Lease New Roomates</label><br/>
     </div>
-   <div class="col-md-4">
+    <!--end of third col 4-->
 
-        <label for="busRouteRequired">Bus route required</label><br/>
-        <label class="radio-inline"><input type="radio" name="busRouteRequired" id="busRouteRequired" ng-model="newLooking.tempLooking.busRouteRequired" value="1">Yes</label>
-        <label class="radio-inline"><input type="radio" name="busRouteRequired"  ng-model="newLooking.tempLooking.busRouteRequired" value="0">No</label><br/><br/>
+    <button ng-click="" class="btn btn-primary">Delete</button>
+    <button ng-click="newLooking.add(newLooking.tempLooking)" class="btn btn-primary">Save</button>
+    <button ng-click="" class="btn btn-primary">Cancel</button>
 
-        <label for="parkingNeeded">Parking Needed</label><br/>
-        <label class="radio-inline"><input type="radio" name="parkingNeeded" id="parkingNeeded" ng-model="newLooking.tempLooking.parkingNeeded" value="1">Yes</label>
-        <label class="radio-inline"><input type="radio" name="parkingNeeded"  ng-model="newLooking.tempLooking.parkingNeeded" value="0">No</label><br/><br/>
-
-        <label for="smokingAllowed">Smoking allowed</label><br/>
-        <label class="radio-inline"><input type="radio" name="smokingAllowed" id="smokingAllowed" ng-model="newLooking.tempLooking.smokingAllowed" value="1">Yes</label>
-        <label class="radio-inline"><input type="radio" name="smokingAllowed"  ng-model="newLooking.tempLooking.smokingAllowed" value="0">No</label><br/><br/>
-
-        <label for="petsAllowed">Pets allowed</label><br/>
-        <label class="radio-inline"><input type="radio" name="petsAllowed" id="petsAllowed" ng-model="newLooking.tempLooking.petsAllowed" value="1">Yes</label>
-        <label class="radio-inline"><input type="radio" name="petsAllowed"  ng-model="newLooking.tempLooking.petsAllowed" value="0">No</label><br/><br/>
-    </div>
-  <button ng-click="newLooking.add(newLooking.tempLooking)" class="btn btn-primary">Add looking</button>
   </div>
 </div>
 
